ADD: datepicker, google chart

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -9,13 +9,18 @@
         <script src="/adminfunc/js/lib/jquery-ui.min.js"></script>
 
         <script src="/adminfunc/js/lib/jsgrid-1.5.3/jsgrid.min.js"></script>
+        <script src="/adminfunc/js/lib/loader.js"></script>
 
         <script th:inline="javascript" src="/adminfunc/js/common.js"></script>
 
-        <link rel="stylesheet" href="/adminfunc/css/style.css"/>
+
 
         <link rel="stylesheet" href="/adminfunc/js/lib/jsgrid-1.5.3/jsgrid-custom.css"/>
         <link rel="stylesheet" href="/adminfunc/js/lib/jsgrid-1.5.3/jsgrid-theme-custom.css"/>
+
+        <link rel="stylesheet" href="/adminfunc/js/lib/jquery-ui.css"/>
+
+        <link rel="stylesheet" href="/adminfunc/css/style.css"/>
 
         <script type="text/javascript" th:inline="javascript" th:if="${NAVBAR}">
             /*<![CDATA[*/
