--- a/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
+++ b/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
@@ -8,6 +8,9 @@
 
     <script type="text/javascript">
         $(function () {
+            $( "#startDatepicker" ).datepicker();
+            $( "#endDatepicker" ).datepicker();
+
             let names = [
                 {
                     'appID': '500',
@@ -142,7 +145,22 @@
                 </div>
             </div>
 
-            <div style="border: 1px solid red; margin-top: 10px; height: 200px;"></div>
+            <div style="border: 1px solid red; margin-top: 10px; height: 200px;">
+                <div class="flex-container">
+                    <div class="flex-item-2" style="border: 1px solid blue;">
+                        <!--<div id="curve_chart" style="width: 100%; height: 100%;"></div>-->
+                    </div>
+                    <div class="flex-item-1">
+                        <div>
+                            <div style="text-align: center;"><span>SelectStartDate</span></div>
+                            <input type="text" id="startDatepicker" />
+                            <div style="text-align: center;"><span>SelectEndDate</span></div>
+                            <input type="text" id="endDatepicker" />
+                        </div>
+                    </div>
+                    <div class="flex-item-1">333</div>
+                </div>
+            </div>
 
             <div style="padding-top: 10px;">
                 <div th:replace="fragments/surge-control-footer::surgeControlFooter" ></div>
