--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -10,6 +10,7 @@
 
         <script src="/adminfunc/js/lib/jsgrid-1.5.3/jsgrid.min.js"></script>
         <script src="/adminfunc/js/lib/loader.js"></script>
+        <script src="/adminfunc/js/lib/bootstrap/bootstrap.min.js"></script>
 
         <script th:inline="javascript" src="/adminfunc/js/common.js"></script>
 
@@ -17,6 +18,7 @@
 
         <link rel="stylesheet" href="/adminfunc/js/lib/jsgrid-1.5.3/jsgrid-custom.css"/>
         <link rel="stylesheet" href="/adminfunc/js/lib/jsgrid-1.5.3/jsgrid-theme-custom.css"/>
+        <link rel="stylesheet" href="/adminfunc/js/lib/bootstrap/bootstrap-custom.css" />
 
         <link rel="stylesheet" href="/adminfunc/js/lib/jquery-ui.css"/>
 
