--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -42,6 +42,20 @@
     border: 10px solid #79A775;
 }
 
+.list-group-item-primary {
+    color: rgb(255, 255, 255);
+    background-color: rgb(66, 139, 202);
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+.hidden {
+    display: none !important;
+    visibility: hidden !important;
+}
+
 .RowSeparator {
     background: #79A775;
     width: 100%;
@@ -285,6 +299,7 @@ main menu
 .main-menu {
     background: #BF5564;
     /* padding: 10px; */
+    height: 30px;
 }
 
 .main-menu > input,
