--- a/src/main/webapp/js/lib/bootstrap/bootstrap-custom.css
+++ b/src/main/webapp/js/lib/bootstrap/bootstrap-custom.css
@@ -6,7 +6,7 @@
  */
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 html {
-    font-family: sans-serif;
+    /*font-family: sans-serif;*/
     line-height: 1.15;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
@@ -137,7 +137,7 @@ input,
 optgroup,
 select,
 textarea {
-    font-family: sans-serif;
+    /*font-family: sans-serif;*/
     font-size: 100%;
     line-height: 1.15;
     margin: 0;
@@ -337,7 +337,7 @@ html {
 }
 
 body {
-    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    /*font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;*/
     font-size: 1rem;
     font-weight: normal;
     line-height: 1.5;
@@ -3181,7 +3181,7 @@ tbody.collapse.show {
 
 .dropdown-divider {
     height: 1px;
-    margin: 0.5rem 0;
+    /*margin: 0.5rem 0;*/
     overflow: hidden;
     background-color: #eceeef;
 }
@@ -5568,7 +5568,7 @@ button.close {
     position: absolute;
     z-index: 1070;
     display: block;
-    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    /*font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;*/
     font-style: normal;
     font-weight: normal;
     letter-spacing: normal;
@@ -5672,7 +5672,7 @@ button.close {
     display: block;
     max-width: 276px;
     padding: 1px;
-    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    /*font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;*/
     font-style: normal;
     font-weight: normal;
     letter-spacing: normal;
