--- a/src/main/resources/templates/eServices2/AccessControl/access-control-create.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control-create.html
@@ -19,188 +19,134 @@
     <div layout:fragment="content">
         <div style="padding: 1.5em;">
             <h3>Access Control Detail</h3>
+            <form method="post" th:action="@{/e-Services-2/maintenance/accessControl_CreateSave.do}">
+                <div>
+                    <div class="RowSeparator"></div>
+                    <div class="param-container">
+                        <div class="" style="padding-left: 15px;">
+                            <input type="radio" name="type" value="White" >
+                            <span class="item-margin-right">WHITELIST</span>
+                            </input>
+                            <input type="radio" name="type" value="Black" checked="checked">
+                            <span>BLACKLIST</span>
+                            </input>
+                        </div>
+                        <div class="param-item-right"></div>
+                    </div>
+                    <div class="RowSeparator"></div>
+                    <div class="flex-container param-container">
+                        <div class="param-item-left"><span th:text="${#messages.msg('umps.adminfunc.accesscontrol.create.name')}"></span></div>
+                        <div class="param-item-right">
+                            <input class="access-name-field" type="text" name="name" maxlength="10" value="myname" />
+                        </div>
+                    </div>
+                    <div class="RowSeparator"></div>
+                    <div class="flex-container param-container">
+                        <div class="param-item-left"><span th:text="${#messages.msg('umps.adminfunc.accesscontrol.create.channel')}"></span></div>
+                        <div class="param-item-right">
+                            <select name="channel" >
+                                <option value="I"><span th:text="${#messages.msg('umps.adminfunc.accesscontrol.create.channel.ivrs')}"></span></option>
+                                <option value="W"><span th:text="${#messages.msg('umps.adminfunc.accesscontrol.create.channel.web')}"></span></option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="RowSeparator"></div>
+                    <div class="flex-container param-container">
+                        <div class="param-item-left"><span th:text="${#messages.msg('umps.adminfunc.accesscontrol.create.ipaddress')}"></span></div>
+                        <div class="param-item-right">
+                            <input class="access-name-field" type="text" name="desc" maxlength="10" value="10.0.1.1"></input>
+                        </div>
+                    </div>
+                    <div class="RowSeparator"></div>
+                    <div class="flex-container param-container">
+                        <!--<input type="hidden" id="effectiveFromDate" name="effectiveFrom" />-->
+                        <div class="param-item-left"><span th:text="${#messages.msg('umps.adminfunc.accesscontrol.create.effectivefrom')}"></span></div>
+                        <div class="param-item-right flex-container effective-code">
+                            <div class="flex-item-1 effective-code-padding">
+                                <input class="effective-long" type="text" maxlength="4" name="effectiveFromYear" value="2017" />
+                                <br />
+                                <span>YYYY</span>
+                            </div>
+                            <div class="flex-item-1 effective-code-padding">
+                                <input class="effective-medium" type="text" maxlength="2" name="effectiveFromMonth" value="08" />
+                                <br />
+                                <span>MM</span>
+                            </div>
+                            <div class="flex-item-1 effective-code-padding">
+                                <input class="effective-medium" type="text" maxlength="2" name="effectiveFromDay" value="15" />
+                                <br />
+                                <span>DD</span>
+                            </div>
+                            <div class="flex-item-1 effective-code-padding">
+                                <input class="effective-medium" type="text" maxlength="2" name="effectiveFromHour" value="00" />
+                                <br />
+                                <span>hh</span>
+                            </div>
+                            <div class="flex-item-1 effective-code-padding">
+                                <input class="effective-medium" type="text" maxlength="2" name="effectiveFromMinute" value="00" />
+                                <br />
+                                <span>mm</span>
+                            </div>
+                            <div class="flex-item-1 effective-code-padding">
+                                <input class="effective-medium" type="text" maxlength="2" name="effectiveFromSecond" value="00" />
+                                <br />
+                                <span>ss</span>
+                            </div>
+                            <div style="flex: 100;"></div>
+                        </div>
+                    </div>
+                    <div class="RowSeparator"></div>
+                    <div class="flex-container param-container">
+                        <div class="param-item-left"><span th:text="${#messages.msg('umps.adminfunc.accesscontrol.create.effectiveto')}"></span></div>
+                        <div class="param-item-right flex-container effective-code">
+                            <div class="flex-item-1 effective-code-padding">
+                                <input class="effective-long" type="text" maxlength="4" name="effectiveToYear" value="2046" />
+                                <br />
+                                <span>YYYY</span>
+                            </div>
+                            <div class="flex-item-1 effective-code-padding">
+                                <input class="effective-medium" type="text" maxlength="2" name="effectiveToMonth" value="09" />
+                                <br />
+                                <span>MM</span>
+                            </div>
+                            <div class="flex-item-1 effective-code-padding">
+                                <input class="effective-medium" type="text" maxlength="2" name="effectiveToDay" value="11" />
+                                <br />
+                                <span>DD</span>
+                            </div>
+                            <div class="flex-item-1 effective-code-padding">
+                                <input class="effective-medium" type="text" maxlength="2" name="effectiveToHour" value="00" />
+                                <br />
+                                <span>hh</span>
+                            </div>
+                            <div class="flex-item-1 effective-code-padding">
+                                <input class="effective-medium" type="text" maxlength="2" name="effectiveToMinute" value="00" />
+                                <br />
+                                <span>mm</span>
+                            </div>
+                            <div class="flex-item-1 effective-code-padding">
+                                <input class="effective-medium" type="text" maxlength="2" name="effectiveToSecond" value="00" />
+                                <br />
+                                <span>ss</span>
+                            </div>
+                            <div style="flex: 100;"></div>
+                        </div>
+                    </div>
+                    <div class="RowSeparator"></div>
+                </div>
 
-            <div>
-                <div class="RowSeparator"></div>
-                <div class="param-container">
-                    <div class="" style="padding-left: 15px;">
-                        <input type="radio" name="accesslist" value="" checked="checked">
-                        <span class="item-margin-right">WHITELIST</span>
-                        </input>
-                        <input type="radio" name="accesslist" value="">
-                        <span>BLACKLIST</span>
-                        </input>
-                    </div>
-                    <div class="param-item-right"></div>
-                </div>
-                <div class="RowSeparator"></div>
-                <div class="flex-container param-container">
-                    <div class="param-item-left">Name</div>
-                    <div class="param-item-right">
-                        <input class="access-name-field" type="text" maxlength="10" value="100"></input>
-                    </div>
-                </div>
-                <div class="RowSeparator"></div>
-                <div class="flex-container param-container">
-                    <div class="param-item-left">Channel</div>
-                    <div class="param-item-right">
-                        <select>
-                            <option value="">IVRS</option>
-                            <option value="">Web application and Mobile App</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="RowSeparator"></div>
-                <div class="flex-container param-container">
-                    <div class="param-item-left">IP Address/Telephone Number</div>
-                    <div class="param-item-right">
-                        <input class="access-name-field" type="text" maxlength="10" value="100"></input>
-                    </div>
-                </div>
-                <div class="RowSeparator"></div>
-                <div class="flex-container param-container">
-                    <div class="param-item-left">Effective From</div>
-                    <div class="param-item-right flex-container effective-code">
-                        <div class="flex-item-1 effective-code-padding">
-                            <input class="effective-long" type="text" maxlength="4" value=""></input>
-                            <br />
-                            <span>YYYY</span>
-                        </div>
-                        <div class="flex-item-1 effective-code-padding">
-                            <input class="effective-medium" type="text" maxlength="2" value=""></input>
-                            <br />
-                            <span>MM</span>
-                        </div>
-                        <div class="flex-item-1 effective-code-padding">
-                            <input class="effective-medium" type="text" maxlength="2" value=""></input>
-                            <br />
-                            <span>DD</span>
-                        </div>
-                        <div class="flex-item-1 effective-code-padding">
-                            <input class="effective-medium" type="text" maxlength="2" value="00"></input>
-                            <br />
-                            <span>hh</span>
-                        </div>
-                        <div class="flex-item-1 effective-code-padding">
-                            <input class="effective-medium" type="text" maxlength="2" value="00"></input>
-                            <br />
-                            <span>mm</span>
-                        </div>
-                        <div class="flex-item-1 effective-code-padding">
-                            <input class="effective-medium" type="text" maxlength="2" value="00"></input>
-                            <br />
-                            <span>ss</span>
-                        </div>
-                        <div style="flex: 100;"></div>
-                    </div>
-                </div>
-                <div class="RowSeparator"></div>
-                <div class="flex-container param-container">
-                    <div class="param-item-left">Effective To</div>
-                    <div class="param-item-right flex-container effective-code">
-                        <div class="flex-item-1 effective-code-padding">
-                            <input class="effective-long" type="text" maxlength="4" value=""></input>
-                            <br />
-                            <span>YYYY</span>
-                        </div>
-                        <div class="flex-item-1 effective-code-padding">
-                            <input class="effective-medium" type="text" maxlength="2" value=""></input>
-                            <br />
-                            <span>MM</span>
-                        </div>
-                        <div class="flex-item-1 effective-code-padding">
-                            <input class="effective-medium" type="text" maxlength="2" value=""></input>
-                            <br />
-                            <span>DD</span>
-                        </div>
-                        <div class="flex-item-1 effective-code-padding">
-                            <input class="effective-medium" type="text" maxlength="2" value="00"></input>
-                            <br />
-                            <span>hh</span>
-                        </div>
-                        <div class="flex-item-1 effective-code-padding">
-                            <input class="effective-medium" type="text" maxlength="2" value="00"></input>
-                            <br />
-                            <span>mm</span>
-                        </div>
-                        <div class="flex-item-1 effective-code-padding">
-                            <input class="effective-medium" type="text" maxlength="2" value="00"></input>
-                            <br />
-                            <span>ss</span>
-                        </div>
-                        <div style="flex: 100;"></div>
-                    </div>
-                </div>
-                <div class="RowSeparator"></div>
-            </div>
 
-            <div style=" float: right; padding-top: 1em;">
-                <a th:href="@{/e-Services-2/maintenance/accessControl_CreateSuccess.do}">
-                    <input type="text" value="Save" class="ButtonStyle submit-button" style="margin-right: 20px;" />
-                </a>
-                <a th:href="@{/e-Services-2/maintenance/accessControl.do}">
-                    <input type="text" value="Cancel" class="ButtonStyle submit-button" />
-                </a>
-            </div>
-
+                <div style=" float: right; padding-top: 1em;">
+                    <!--<a th:href="@{/e-Services-2/maintenance/accessControl_CreateSuccess.do}">-->
+                        <input type="submit" value="Save" class="ButtonStyle submit-button" style="margin-right: 20px;" />
+                    <!--</a>-->
+                    <a th:href="@{/e-Services-2/maintenance/accessControl.do}">
+                        <input type="text" value="Cancel" class="ButtonStyle submit-button" />
+                    </a>
+                </div>
+            </form>
         </div>
     </div>
-
-
-    <!--
-    <div class="flex-container">
-        <div class="flex-item-1 header-item-left">
-            <span>e-Services-2</span>
-        </div>
-        <div></div>
-        <div class="flex-item-1 header-item-right">
-                <span>| userID:
-                    <b></b> |</span>
-            <span>Date:
-                    <b id="todayDate"></b>
-                </span>
-        </div>
-    </div>
-    <div class="grid-container " style="height: 600px;">
-        <div class="main-menu">
-
-            <input type="radio" id="main-tab-1" name="main-tabs" checked="checked"/>
-            <label for="main-tab-1" style="margin-left: 30px;">e-Services-2</label>
-
-            <input type="radio" id="main-tab-2" name="main-tabs"/>
-            <label for="main-tab-2">SMARTICS-2</label>
-
-
-            <input type="radio" id="main-tab-3" name="main-tabs"/>
-            <label for="main-tab-3">RM</label>
-
-            <div style="float: right;">
-                <a th:href="@{/AUTH/logout.do}" class="exit-btn">
-                    <input type="submit" id="exit-tab" name="" />
-                    <label for="exit-tab" >Exit</label>
-                </a >
-            </div>
-
-
-            <div id="main-content-1">
-                <div class="flex-container grid-nav-container">
-                    <div class="flex-item-1 nav-title-left">
-                            <span style=" width: '100%'">e-Services-2 >
-                                <span id="eServices2SubCat">Maintenance</span> >
-                                <span id="eServices2Func">Access Control</span>
-                            </span>
-                    </div>
-                    <div class="flex-item-1 nav-title-right">
-                        <span style="width: 100%;">ACM0011</span>
-                    </div>
-                </div>
-                <div class="content-container " style=" height: 300px;">
-
-                </div>
-            </div>
-        </div>
-    </div>
-    -->
 
 </div>
 </body>
