ADD: Schedule Job View, Schedule Job, Schedule Job View History MOD: layout padding

--- a/src/main/resources/templates/eServices2/AccessControl/access-control-create.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control-create.html
@@ -17,7 +17,7 @@
     <div layout:fragment="header(${ROOT})"></div>
 
     <div layout:fragment="content">
-        <div style="padding: 1.5em;">
+        <div class="content-padding">
             <h3>Access Control Detail</h3>
             <form method="post" th:action="@{/e-Services-2/maintenance/accessControl_CreateSave.do}">
                 <div>
