--- a/src/main/resources/templates/eServices2/AccessControl/access-control.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control.html
@@ -101,7 +101,7 @@
     <div layout:fragment="header(${ROOT})"></div>
 
     <div layout:fragment="content">
-        <div style="padding: 1.5em;">
+        <div class="content-padding">
             <div class="flex-container">
                 <div class="flex-item-1 ">
                     <span class="field-name" style="font-size: large; line-height: 30px;">Access Control</span>
