--- a/src/main/resources/templates/eServices2/AuditLog/audit-log-search-form.html
+++ b/src/main/resources/templates/eServices2/AuditLog/audit-log-search-form.html
@@ -30,7 +30,7 @@
             })
         </script>
         <form id="auditLog" th:action="@{/eservices2/auditLogSearch.do}" method="post" >
-        <div style="padding: 1.5em;">
+        <div class="content-padding">
             <div style=" margin-top: 1.5em; width: 100%; height: 200px; ">
                 <div id="auditLogSearch">
                     <span>Search Criteria</span>
