--- a/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
+++ b/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
@@ -184,7 +184,7 @@
     <div layout:fragment="header(${ROOT})"></div>
 
     <div layout:fragment="content" style="">
-        <div style="padding: 1.5em; ">
+        <div class="content-padding">
 
             <div>
                 <h3 th:text="${#messages.msg('umps.adminfunc.surgecontrol.main.search.title')}"></h3>
