--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -116,10 +116,10 @@
                                                 <a th:href="@{/e-Services-2/enquiry/systemHoliday.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.enquiry.systemholidayview')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.enquiry.schedulejobview')}"></a>
+                                                <a th:href="@{/e-Services-2/enquiry/scheduleJobView.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.enquiry.schedulejobview')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.enquiry.schedulejobviewhistory')}"></a>
+                                                <a th:href="@{/e-Services-2/enquiry/scheduleJobViewHistory.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.enquiry.schedulejobviewhistory')}"></a>
                                             </li>
                                         </ul>
                                     </div>
@@ -138,7 +138,7 @@
                                                 <a th:href="@{/eservices2/auditLog_SearchForm.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.auditlog')}"></a>
                                             </li>
                                             <li class="func-child">
-                                                <a class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.schedulejob')}"></a>
+                                                <a th:href="@{/e-Services-2/maintenance/scheduleJob.do}" class="func-bullet" th:text="${#messages.msg('umps.adminfunc.func.eservices2.maintenance.schedulejob')}"></a>
                                             </li>
                                         </ul>
                                     </div>
