--- a/src/main/resources/templates/eServices2/AccessControl/access-control-create-success.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control-create-success.html
@@ -30,7 +30,7 @@
     <div layout:fragment="header(${ROOT})"></div>
 
     <div layout:fragment="content">
-        <div style="padding: 1.5em;">
+        <div class="content-padding">
             <div class="border-frame global-success-frame " style="padding: 1em;">
                 <div class="flex-container success-item-container">
                     <div class="success-item-left">
