--- a/src/main/resources/templates/eServices2/AccessControl/access-control-global-success.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control-global-success.html
@@ -23,7 +23,7 @@
     <div layout:fragment="header(${ROOT})"></div>
 
     <div layout:fragment="content">
-        <div style="padding: 1.5em;">
+        <div class="content-padding">
             <h3>Global Parameters</h3>
 
             <div class="border-frame global-success-frame " style="padding: 1em;">
