--- a/src/main/resources/templates/eServices2/AccessControl/access-control-global.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control-global.html
@@ -23,7 +23,7 @@
     <div layout:fragment="header(${ROOT})"></div>
 
     <div layout:fragment="content">
-        <div style="padding: 1.5em;">
+        <div class="content-padding">
             <form method="post" th:action="@{/e-Services-2/maintenance/accessControl_GlobalParamsSave.do}">
                 <h3>Global Parameters</h3>
 
