--- a/src/main/resources/templates/eServices2/AccessControl/access-control-view.html
+++ b/src/main/resources/templates/eServices2/AccessControl/access-control-view.html
@@ -28,7 +28,7 @@
     <div layout:fragment="header(${ROOT})"></div>
 
     <div layout:fragment="content">
-        <div style="padding: 1.5em;">
+        <div class="content-padding">
             <h3>Access Control Detail</h3>
 
             <div>
