--- a/src/main/resources/templates/eServices2/AuditLog/audit-log-search.html
+++ b/src/main/resources/templates/eServices2/AuditLog/audit-log-search.html
@@ -76,7 +76,7 @@
     <div layout:fragment="header(${ROOT})"></div>
 
     <div layout:fragment="content">
-        <div style="padding: 1.5em;">
+        <div class="content-padding">
             <div style=" margin-top: 1.5em; width: 100%; height: 200px; ">
                 <div id="auditLogGrid"></div>
             </div>
