--- a/src/main/resources/templates/eServices2/SurgeControl/edit-surge-control.html
+++ b/src/main/resources/templates/eServices2/SurgeControl/edit-surge-control.html
@@ -163,7 +163,7 @@
     <div layout:fragment="header(${ROOT})"></div>
 
     <div layout:fragment="content" style="">
-        <div style="padding: 1.5em; ">
+        <div class="content-padding">
 
 
 
