--- a/src/main/resources/templates/eServices2/SurgeControl/surge-control-updated.html
+++ b/src/main/resources/templates/eServices2/SurgeControl/surge-control-updated.html
@@ -96,7 +96,7 @@
     <div layout:fragment="header(${ROOT})"></div>
 
     <div layout:fragment="content" style="">
-        <div style="padding: 1.5em; ">
+        <div class="content-padding">
 
             <div style=" margin-top: 1.5em; width: 100%; height: 200px;">
                 <div id="surgeControlGrid"></div>
