--- a/src/main/resources/templates/eServices2/application-fee-enquiry.html
+++ b/src/main/resources/templates/eServices2/application-fee-enquiry.html
@@ -131,7 +131,7 @@
     <div layout:fragment="header(${ROOT})"></div>
 
     <div layout:fragment="content">
-        <div style="padding: 1.5em;">
+        <div class="content-padding">
             <div id="appFeeEnqGrid"></div>
         </div>
     </div>
