--- a/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-view-history-search.html
+++ b/src/main/resources/templates/eServices2/ScheduleJob/schedule-job-view-history-search.html
@@ -18,7 +18,74 @@
 
     <div layout:fragment="content">
         <div class="content-padding">
-            <h3>ScheduleJobViewHist</h3>
+            <div>
+                <div>
+                    <b><span th:text="${#messages.msg('umps.adminfunc.common.searchCriteria')}"></span></b>
+                </div>
+                <div >
+                    <div class="RowSeparatorThin"></div>
+                    <div class="flex-container search-padding">
+                        <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.jobname')}"></span></b></div>
+                        <div class="flex-item-7">
+                            <select>
+                                <option value=""><span>JobNameA</span></option>
+                                <option value=""><span>JobNameB</span></option>
+                                <option value=""><span>JobNameC</span></option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="flex-container search-padding">
+                        <div class="flex-item-2 search-field-left"><b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.status')}"></span></b></div>
+                        <div class="flex-item-7">
+                            <select>
+                                <option value=""><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.select.success')}"></span></option>
+                                <option value=""><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.select.failed')}"></span></option>
+                                <option value=""><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.select.running')}"></span></option>
+                            </select>
+                        </div>
+                    </div>
+
+
+                    <div class="flex-container search-padding">
+                        <div class="flex-item-2 search-field-left">
+                            <input type="radio" name="time" />
+                            <b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.startTime')}"></span></b>
+                        </div>
+                        <div class="flex-item-7">
+                            <input class="search-input-time" type="text" maxlength="10" size="10" />
+                            <span class="search-time-padding">(dd/mm/yyyy)</span>
+                            <input class="search-input-minute" type="text" maxlength="2" size="2" />
+                            <span> : </span>
+                            <input class="search-input-minute" type="text" maxlength="2" size="2" />
+                            <span>(hh:mm)</span>
+                        </div>
+                    </div>
+                    <div class="flex-container search-padding">
+                        <div class="flex-item-2 search-field-left">
+                            <input type="radio" name="time" />
+                            <b><span th:text="${#messages.msg('umps.adminfunc.schedulejob.view.history.search.field.endTime')}"></span></b>
+                        </div>
+                        <div class="flex-item-7">
+                            <input class="search-input-time" type="text" maxlength="10" size="10" />
+                            <span class="search-time-padding">(dd/mm/yyyy)</span>
+                            <input class="search-input-minute" type="text" maxlength="2" size="2" />
+                            <span> : </span>
+                            <input class="search-input-minute" type="text" maxlength="2" size="2" />
+                            <span>(hh:mm)</span>
+                        </div>
+                    </div>
+
+                    <div class="RowSeparatorThin"></div>
+                </div>
+                <div class="flex-container" style="padding-top: 30px;">
+                    <div style="flex: auto;"></div>
+                    <div style="padding: 15px;">
+                        <a th:href="@{/e-Services-2/enquiry/scheduleJobViewHistory_Result.do}">
+                            <input class="SmallButtonStyle pointer" style="min-width: 80px;" type="submit" th:value="${#messages.msg('umps.adminfunc.common.search')}" />
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
