--- a/src/main/webapp/css/schedule-job.css
+++ b/src/main/webapp/css/schedule-job.css
@@ -1,14 +1,40 @@
+
+.back-button {
+
+}
+
+.button {
+    width: 80px;
+}
+
+.back-button, .button {
+    text-align: center;
+    text-decoration-line: none;
+}
+
 .search-padding {
     padding: 5px;
 }
 
 .search-field-left {
     padding-left: 50px;
+}
+
+.search-field-left, .search-field-right {
     line-height: 30px;
 }
 
 .search-input {
     width: 200px;
+}
+
+.search-result-left {
+
+}
+
+.search-result-left, .search-result-right {
+    height: 15px;
+    line-height: 15px;
 }
 
 .search-input-time {
