--- a/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
+++ b/src/main/resources/templates/eServices2/SurgeControl/surge-control.html
@@ -122,7 +122,7 @@
             });
 
 
-            let names = [
+            var names = [
                 {
                     'appID': '500',
                     'GST': '20/20',
@@ -133,7 +133,7 @@
                 }
             ];
 
-            let grid = $("#surgeControlGrid");
+            var grid = $("#surgeControlGrid");
             // console.log(grid);
 
 
